Update index.html portfolyo

--- a/index.html
+++ b/index.html
@@ -898,6 +898,10 @@
       color: var(--muted);
       font-size: 15px;
       opacity: 0.9;
+      position: relative;
+      z-index: 10;
+      background: var(--bg);
+      padding: 20px;
     }
 
     /* 🌈 RAINBOW SCROLL PROGRESS */
@@ -1245,7 +1249,277 @@
       }
     }
 
-    /* 🔍 ACCESSIBILITY - Focus states */
+    /* 🎨 LIGHT THEME CLASS */
+    body.light-theme {
+      --bg: #f5f5f7;
+      --card: rgba(255, 255, 255, 0.8);
+      --text: #1d1d1f;
+      --muted: #6e6e73;
+    }
+
+    body.light-theme::before {
+      background: 
+        radial-gradient(circle at 20% 50%, rgba(212, 175, 55, 0.08) 0%, transparent 40%),
+        radial-gradient(circle at 80% 20%, rgba(168, 85, 247, 0.06) 0%, transparent 40%);
+    }
+
+    body.light-theme .card {
+      box-shadow: 
+        0 20px 40px rgba(0, 0, 0, 0.1),
+        inset 0 1px 0 rgba(255, 255, 255, 0.8);
+    }
+
+    body.light-theme .cursor,
+    body.light-theme .cursor-follower {
+      border-color: #000;
+      mix-blend-mode: difference;
+    }
+
+    /* 🎨 PORTFOLIO GALLERY */
+    .portfolio-header {
+      text-align: center;
+      margin: 80px 0 50px;
+    }
+
+    .portfolio-header h2 {
+      font-size: clamp(32px, 4vw, 48px);
+      margin-bottom: 15px;
+      background: linear-gradient(135deg, var(--gold), var(--purple));
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+    }
+
+    .portfolio-header p {
+      color: var(--muted);
+      font-size: 18px;
+    }
+
+    .portfolio-filters {
+      display: flex;
+      justify-content: center;
+      gap: 15px;
+      margin: 40px 0;
+      flex-wrap: wrap;
+    }
+
+    .filter-btn {
+      padding: 12px 24px;
+      border-radius: 999px;
+      border: 2px solid rgba(212, 175, 55, 0.3);
+      background: rgba(255, 255, 255, 0.05);
+      color: var(--text);
+      font-weight: 600;
+      cursor: pointer;
+      transition: all 0.3s ease;
+    }
+
+    .filter-btn:hover,
+    .filter-btn.active {
+      background: linear-gradient(135deg, var(--gold), var(--gold-light));
+      color: #000;
+      border-color: transparent;
+      transform: translateY(-2px);
+    }
+
+    .portfolio-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+      gap: 30px;
+      margin: 50px 0;
+    }
+
+    .portfolio-item {
+      background: var(--card);
+      backdrop-filter: blur(20px);
+      border: 2px solid rgba(212, 175, 55, 0.2);
+      border-radius: 25px;
+      overflow: hidden;
+      cursor: pointer;
+      transition: all 0.5s cubic-bezier(0.34, 1.56, 0.64, 1);
+      position: relative;
+      opacity: 0;
+      transform: translateY(30px);
+      animation: portfolioReveal 0.6s ease forwards;
+    }
+
+    @keyframes portfolioReveal {
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    .portfolio-item:nth-child(1) { animation-delay: 0.1s; }
+    .portfolio-item:nth-child(2) { animation-delay: 0.2s; }
+    .portfolio-item:nth-child(3) { animation-delay: 0.3s; }
+    .portfolio-item:nth-child(4) { animation-delay: 0.4s; }
+    .portfolio-item:nth-child(5) { animation-delay: 0.5s; }
+    .portfolio-item:nth-child(6) { animation-delay: 0.6s; }
+
+    .portfolio-item.hidden {
+      display: none;
+    }
+
+    .portfolio-item:hover {
+      transform: translateY(-15px) scale(1.03);
+      border-color: var(--gold);
+      box-shadow: 0 30px 80px rgba(212, 175, 55, 0.3);
+    }
+
+    .portfolio-image {
+      width: 100%;
+      height: 250px;
+      background: linear-gradient(135deg, rgba(212, 175, 55, 0.1), rgba(168, 85, 247, 0.1));
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 48px;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .portfolio-image::after {
+      content: '';
+      position: absolute;
+      inset: 0;
+      background: linear-gradient(135deg, transparent, rgba(0, 0, 0, 0.3));
+      opacity: 0;
+      transition: opacity 0.3s ease;
+    }
+
+    .portfolio-item:hover .portfolio-image::after {
+      opacity: 1;
+    }
+
+    .portfolio-content {
+      padding: 25px;
+    }
+
+    .portfolio-category {
+      display: inline-block;
+      padding: 6px 14px;
+      border-radius: 999px;
+      background: linear-gradient(135deg, var(--gold), var(--gold-light));
+      color: #000;
+      font-size: 12px;
+      font-weight: 700;
+      margin-bottom: 12px;
+      text-transform: uppercase;
+      letter-spacing: 0.5px;
+    }
+
+    .portfolio-title {
+      font-size: 22px;
+      font-weight: 800;
+      margin-bottom: 10px;
+      color: var(--text);
+    }
+
+    .portfolio-description {
+      color: var(--muted);
+      font-size: 15px;
+      line-height: 1.6;
+      margin-bottom: 15px;
+    }
+
+    .portfolio-tags {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 8px;
+    }
+
+    .portfolio-tag {
+      padding: 5px 12px;
+      border-radius: 999px;
+      background: rgba(212, 175, 55, 0.1);
+      border: 1px solid rgba(212, 175, 55, 0.3);
+      font-size: 12px;
+      color: var(--gold);
+    }
+
+    /* Portfolio Modal */
+    .portfolio-modal {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.95);
+      z-index: 10000;
+      display: none;
+      align-items: center;
+      justify-content: center;
+      opacity: 0;
+      transition: opacity 0.3s ease;
+      padding: 20px;
+      overflow-y: auto;
+    }
+
+    .portfolio-modal.active {
+      display: flex;
+      opacity: 1;
+    }
+
+    .portfolio-modal-content {
+      background: var(--card);
+      backdrop-filter: blur(30px);
+      border: 2px solid var(--gold);
+      border-radius: 30px;
+      max-width: 900px;
+      width: 100%;
+      padding: 50px;
+      position: relative;
+      transform: scale(0.9);
+      transition: transform 0.3s ease;
+    }
+
+    .portfolio-modal.active .portfolio-modal-content {
+      transform: scale(1);
+    }
+
+    .modal-close {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      background: rgba(255, 255, 255, 0.1);
+      border: 2px solid var(--gold);
+      color: var(--gold);
+      font-size: 24px;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: all 0.3s ease;
+    }
+
+    .modal-close:hover {
+      background: var(--gold);
+      color: #000;
+      transform: rotate(90deg);
+    }
+
+    @media (max-width: 768px) {
+      .portfolio-grid {
+        grid-template-columns: 1fr;
+      }
+
+      .portfolio-filters {
+        gap: 10px;
+      }
+
+      .filter-btn {
+        padding: 10px 18px;
+        font-size: 14px;
+      }
+
+      .portfolio-modal-content {
+        padding: 30px;
+      }
+    }
     a:focus-visible,
     button:focus-visible {
       outline: 3px solid var(--gold);
@@ -1374,6 +1648,118 @@
       </article>
     </section>
 
+    <!-- 🎨 PORTFOLIO GALLERY -->
+    <section id="portfolio" class="portfolio-section">
+      <div class="portfolio-header">
+        <h2>Projelerim</h2>
+        <p>Operasyon, yazılım ve gayrimenkul alanındaki seçili çalışmalarım</p>
+      </div>
+
+      <div class="portfolio-filters">
+        <button class="filter-btn active" data-filter="all">Tümü</button>
+        <button class="filter-btn" data-filter="otopark">Otopark</button>
+        <button class="filter-btn" data-filter="yazilim">Yazılım</button>
+        <button class="filter-btn" data-filter="gayrimenkul">Gayrimenkul</button>
+      </div>
+
+      <div class="portfolio-grid">
+        <!-- Otopark Projeleri -->
+        <div class="portfolio-item" data-category="otopark">
+          <div class="portfolio-image">🅿️</div>
+          <div class="portfolio-content">
+            <span class="portfolio-category">Otopark</span>
+            <h3 class="portfolio-title">Rönesans AVM Otopark Operasyonu</h3>
+            <p class="portfolio-description">750+ araç kapasiteli otoparkın tam operasyonel yönetimi ve gelir optimizasyonu.</p>
+            <div class="portfolio-tags">
+              <span class="portfolio-tag">Operasyon</span>
+              <span class="portfolio-tag">Gelir Yönetimi</span>
+              <span class="portfolio-tag">HGS</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="portfolio-item" data-category="otopark">
+          <div class="portfolio-image">🚗</div>
+          <div class="portfolio-content">
+            <span class="portfolio-category">Otopark</span>
+            <h3 class="portfolio-title">HGS Entegrasyon Sistemi</h3>
+            <p class="portfolio-description">Araç giriş-çıkışlarında HGS ile otomatik ödeme ve kimlik doğrulama sistemi.</p>
+            <div class="portfolio-tags">
+              <span class="portfolio-tag">Otomasyon</span>
+              <span class="portfolio-tag">API</span>
+              <span class="portfolio-tag">Real-time</span>
+            </div>
+          </div>
+        </div>
+
+        <!-- Yazılım Projeleri -->
+        <div class="portfolio-item" data-category="yazilim">
+          <div class="portfolio-image">💻</div>
+          <div class="portfolio-content">
+            <span class="portfolio-category">Yazılım</span>
+            <h3 class="portfolio-title">Expert Grup Yönetim Paneli</h3>
+            <p class="portfolio-description">Tüm şirket operasyonlarını tek merkezden yöneten kapsamlı dashboard sistemi.</p>
+            <div class="portfolio-tags">
+              <span class="portfolio-tag">Dashboard</span>
+              <span class="portfolio-tag">Analytics</span>
+              <span class="portfolio-tag">Multi-tenant</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="portfolio-item" data-category="yazilim">
+          <div class="portfolio-image">🤖</div>
+          <div class="portfolio-content">
+            <span class="portfolio-category">Yazılım</span>
+            <h3 class="portfolio-title">AI Destekli Müşteri İletişimi</h3>
+            <p class="portfolio-description">Yapay zeka ile otomatik müşteri destek ve iletişim yönetim sistemi.</p>
+            <div class="portfolio-tags">
+              <span class="portfolio-tag">AI/ML</span>
+              <span class="portfolio-tag">Chatbot</span>
+              <span class="portfolio-tag">NLP</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="portfolio-item" data-category="yazilim">
+          <div class="portfolio-image">📊</div>
+          <div class="portfolio-content">
+            <span class="portfolio-category">Yazılım</span>
+            <h3 class="portfolio-title">Raporlama Otomasyonu</h3>
+            <p class="portfolio-description">PDF/Excel formatında otomatik rapor üretimi ve dağıtım sistemi.</p>
+            <div class="portfolio-tags">
+              <span class="portfolio-tag">Automation</span>
+              <span class="portfolio-tag">PDF/Excel</span>
+              <span class="portfolio-tag">Scheduling</span>
+            </div>
+          </div>
+        </div>
+
+        <!-- Gayrimenkul Projeleri -->
+        <div class="portfolio-item" data-category="gayrimenkul">
+          <div class="portfolio-image">🏢</div>
+          <div class="portfolio-content">
+            <span class="portfolio-category">Gayrimenkul</span>
+            <h3 class="portfolio-title">Goods Real Estate Platform</h3>
+            <p class="portfolio-description">Kurumsal gayrimenkul danışmanlık ve proje takip platformu.</p>
+            <div class="portfolio-tags">
+              <span class="portfolio-tag">CRM</span>
+              <span class="portfolio-tag">Web Platform</span>
+              <span class="portfolio-tag">Lead Management</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Portfolio Modal -->
+    <div class="portfolio-modal" id="portfolioModal">
+      <div class="portfolio-modal-content">
+        <button class="modal-close" onclick="closeModal()">×</button>
+        <div id="modalContent"></div>
+      </div>
+    </div>
+
     <section id="isler" style="margin-top:80px">
       <div class="links">
         <a class="link" href="https://www.parkexpert.net" target="_blank" rel="noopener noreferrer">
@@ -1481,10 +1867,34 @@
       });
     }
 
-    // 🌓 TEMA TOGGLE
+    // 🌓 TEMA TOGGLE - Düzeltilmiş
     const themeToggle = document.getElementById('theme-toggle');
+    let currentTheme = 'dark';
+
+    // LocalStorage'dan tema yükle
+    const savedTheme = localStorage.getItem('theme');
+    if (savedTheme) {
+      currentTheme = savedTheme;
+      if (currentTheme === 'light') {
+        document.body.classList.add('light-theme');
+        themeToggle.textContent = '🌙';
+      } else {
+        themeToggle.textContent = '☀︎';
+      }
+    }
+
     themeToggle.addEventListener('click', () => {
-      themeToggle.textContent = themeToggle.textContent === '☀︎' ? '🌙' : '☀︎';
+      if (currentTheme === 'dark') {
+        currentTheme = 'light';
+        document.body.classList.add('light-theme');
+        themeToggle.textContent = '🌙';
+        localStorage.setItem('theme', 'light');
+      } else {
+        currentTheme = 'dark';
+        document.body.classList.remove('light-theme');
+        themeToggle.textContent = '☀︎';
+        localStorage.setItem('theme', 'dark');
+      }
     });
 
     // 📜 HEADER SCROLL
@@ -1745,6 +2155,86 @@
     console.log('📱 Mobil:', isMobile);
     console.log('⚡ Reduced Motion:', isReducedMotion);
     console.log('💫 Parçacık sayısı:', particleCount);
+
+    // 🎨 PORTFOLIO FILTER
+    const filterBtns = document.querySelectorAll('.filter-btn');
+    const portfolioItems = document.querySelectorAll('.portfolio-item');
+
+    filterBtns.forEach(btn => {
+      btn.addEventListener('click', () => {
+        // Active state değiştir
+        filterBtns.forEach(b => b.classList.remove('active'));
+        btn.classList.add('active');
+
+        const filter = btn.getAttribute('data-filter');
+
+        // Filter items
+        portfolioItems.forEach(item => {
+          if (filter === 'all' || item.getAttribute('data-category') === filter) {
+            item.classList.remove('hidden');
+            item.style.animation = 'none';
+            setTimeout(() => {
+              item.style.animation = 'portfolioReveal 0.6s ease forwards';
+            }, 10);
+          } else {
+            item.classList.add('hidden');
+          }
+        });
+      });
+    });
+
+    // 🎯 PORTFOLIO MODAL
+    portfolioItems.forEach(item => {
+      item.addEventListener('click', () => {
+        const title = item.querySelector('.portfolio-title').textContent;
+        const description = item.querySelector('.portfolio-description').textContent;
+        const category = item.querySelector('.portfolio-category').textContent;
+        const emoji = item.querySelector('.portfolio-image').textContent;
+
+        const modalContent = document.getElementById('modalContent');
+        modalContent.innerHTML = `
+          <div style="text-align: center; margin-bottom: 30px; font-size: 80px;">
+            ${emoji}
+          </div>
+          <span style="display: inline-block; padding: 8px 16px; border-radius: 999px; background: linear-gradient(135deg, var(--gold), var(--gold-light)); color: #000; font-size: 14px; font-weight: 700; margin-bottom: 20px;">
+            ${category}
+          </span>
+          <h2 style="font-size: 36px; margin-bottom: 20px; background: linear-gradient(135deg, var(--gold), var(--purple)); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">
+            ${title}
+          </h2>
+          <p style="font-size: 18px; color: var(--muted); line-height: 1.8; margin-bottom: 30px;">
+            ${description}
+          </p>
+          <div style="padding: 25px; background: rgba(212, 175, 55, 0.1); border-radius: 20px; border: 1px solid rgba(212, 175, 55, 0.3);">
+            <h3 style="color: var(--gold); margin-bottom: 15px;">💡 Proje Detayları</h3>
+            <p style="color: var(--muted); line-height: 1.8;">
+              Bu proje hakkında daha fazla bilgi almak için benimle iletişime geçebilirsiniz.
+              Operasyonel süreçler, teknik altyapı ve elde edilen sonuçlar hakkında detaylı bilgi verebilirim.
+            </p>
+          </div>
+        `;
+
+        document.getElementById('portfolioModal').classList.add('active');
+      });
+    });
+
+    function closeModal() {
+      document.getElementById('portfolioModal').classList.remove('active');
+    }
+
+    // Modal dışına tıklayınca kapat
+    document.getElementById('portfolioModal').addEventListener('click', (e) => {
+      if (e.target.id === 'portfolioModal') {
+        closeModal();
+      }
+    });
+
+    // ESC tuşu ile kapat
+    document.addEventListener('keydown', (e) => {
+      if (e.key === 'Escape') {
+        closeModal();
+      }
+    });
   </script> matrix.length)];
         ctx.fillText(text, i * fontSize, drops[i] * fontSize);
 
